# proz-m8

./: CLAUDE.md  README.md  m8-api-doc.md  pyproject.toml
src/m8/: __init__.py  m8.py
src/m8/purchase_order/: __init__.py  purchase_order.py
tests/: conftest.py  test_auth.py  test_dataclasses.py  test_invoices.py  test_purchase_orders.py  test_receivables.py
