[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proz-m8"
version = "0.1.0"
description = "Integração com o m8"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
	"openpyxl",
	"requests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/m8"]
